# DDR_Data_Recorder

./: .gitignore  CMakeLists.txt  INTENT.md  LICENSE.md  package.xml
launch/: ddr.launch  ddrGui.launch  ddr_clean_up.launch
msg/: AndBeyonder.msg  Event.msg  TopicStatus.msg  TopicsUpdate.msg
scripts/: util.py
scripts/LiveMileageCounter/: mileage.py
scripts/SplitManager/: filetracker.py  manager.py  msg_capture.py  tracker.py
scripts/api/: api.py  mode_state_bridge_example.py
scripts/connections/: connections_generator.py
scripts/ddr_ui/: ddr_ui_hotkeys_config.txt  gui.py  gui.tcl  gui_support.py
scripts/dynamic_recording/: FilterFunction.cpp  TopicParser.py  dynamic_recorder.py  examplekml.xml  exampletestkml.xml
scripts/headless_DDR/: ddr_event_pub.sh  manual_trigger.sh  shadow_trigger.sh
scripts/markdown/: gear_mode_module.py  gps_module.py  markdown.py  rosbag_reporter.py  topic_group_module.py
scripts/rosparam_capture/: rosparam_capture.py
scripts/testing/: andBeyond.py  automated_testing.py  bagAnalyzer.py  connection_testing.py  pyklint.py  toInfinity.py  toInfinityer.py  topic_bag_checker.py  topic_connection.py  topic_set_difference.py  verification_report.py  verify_data.py
